chore(S02): Ajoute la théorie de static

--- a/sequences/02.md
+++ b/sequences/02.md
@@ -5,5 +5,5 @@
 - Commencer l'exercice des [parachutistes](../exos/02-02-Parachutes/parachutes.md) en autonomie (jusqu'à la pause)
 - Aperçu de la solution
 - Continuation de l'exercice en utilisant les indices découverts (jusque vers 11h00)
-- Théorie : [l'encapsulation](../supports/Encapsulation.pdf)
+- Théorie : Déclarer et utiliser les méthodes et attributs avec [l'encapsulation](../supports/Encapsulation.pdf) et [static](../supports/Statique.pdf)
 - Finaliser l'exercice Parachutes en appliquant l'encapsulation
